Add test projects, shared fixtures, and initial unit tests.

--- a/test/Zift.Tests/Zift.Tests.csproj
+++ b/test/Zift.Tests/Zift.Tests.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Zift\Zift.csproj" />
+    <ProjectReference Include="..\Zift.SharedFixture\Zift.SharedFixture.csproj" />
   </ItemGroup>
 
 </Project>
