--- a/test/Zift.Tests/Zift.Tests.csproj
+++ b/test/Zift.Tests/Zift.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -29,5 +29,5 @@
     <ProjectReference Include="..\..\src\Zift\Zift.csproj" />
     <ProjectReference Include="..\Zift.SharedFixture\Zift.SharedFixture.csproj" />
   </ItemGroup>
-
+  
 </Project>
