--- a/src/Zift/Zift.csproj
+++ b/src/Zift/Zift.csproj
@@ -4,8 +4,15 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <IsPackable>true</IsPackable>
+    <IncludeSymbols>true</IncludeSymbols>
+    <Version>0.1.0</Version>
+    <Authors>Jim Atas</Authors>
+    <Description>Lightweight and composable library for shaping IQueryable&lt;T&gt; with filtering, sorting, and pagination. Supports both expression- and string-based criteria.</Description>
+    <RepositoryUrl>https://github.com/jimatas/Zift</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
-
+  
   <ItemGroup>
     <InternalsVisibleTo Include="Zift.EntityFrameworkCore" />
     <InternalsVisibleTo Include="Zift.Tests" />
