--- a/src/Zift.EntityFrameworkCore/Zift.EntityFrameworkCore.csproj
+++ b/src/Zift.EntityFrameworkCore/Zift.EntityFrameworkCore.csproj
@@ -7,7 +7,8 @@
     <IsPackable>true</IsPackable>
     <Version>0.1.0</Version>
     <Authors>Jim Atas</Authors>
-    <Description>Entity Framework Core integration for Zift. Adds async query execution and pagination for IQueryable&lt;T&gt; using Zift's filtering, sorting, and pagination criteria.</Description>
+    <Description>Entity Framework Core integration for Zift. Enables async query execution and pagination for IQueryable&lt;T&gt; using Zift's filtering, sorting, and pagination criteria.</Description>
+    <PackageTags>efcore entityframeworkcore filtering sorting pagination async queryable linq dotnet</PackageTags>
     <RepositoryUrl>https://github.com/jimatas/Zift</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
