--- a/test/Zift.EntityFrameworkCore.Tests/Zift.EntityFrameworkCore.Tests.csproj
+++ b/test/Zift.EntityFrameworkCore.Tests/Zift.EntityFrameworkCore.Tests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
@@ -27,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Zift.EntityFrameworkCore\Zift.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\Zift.SharedFixture\Zift.SharedFixture.csproj" />
   </ItemGroup>
 
 </Project>
