--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -1,10 +1,9 @@
 name: Publish NuGet Packages
 
 on:
-  push:
-    tags:
-      - 'v*'  # Trigger on tags (e.g., v1.2.3)
-      
+  release:
+    types: [published]
+    
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -12,7 +11,9 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      
+      with:
+        ref: ${{ github.event.release.tag_name }}
+        
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v4
       with:
