Update Readme.md with absolute URLs and resize logo in docs/assets.

--- a/src/Zift/Zift.csproj
+++ b/src/Zift/Zift.csproj
@@ -5,13 +5,20 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>true</IsPackable>
-    <Version>0.3.0</Version>
+    <Version>0.3.1</Version>
     <Authors>Jim Atas</Authors>
     <Description>Lightweight, composable .NET library for filtering, sorting, and paginating IQueryable&lt;T&gt; using expression- or string-based criteria.</Description>
     <PackageTags>filtering sorting pagination queryable expressions linq</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>Readme.md</PackageReadmeFile>
+    <PackageProjectUrl>https://github.com/jimatas/Zift</PackageProjectUrl>
     <RepositoryUrl>https://github.com/jimatas/Zift</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="../../Readme.md" Pack="true" PackagePath="" />
+  </ItemGroup>
   
   <ItemGroup>
     <InternalsVisibleTo Include="Zift.EntityFrameworkCore" />
