--- a/src/Zift.EntityFrameworkCore/Zift.EntityFrameworkCore.csproj
+++ b/src/Zift.EntityFrameworkCore/Zift.EntityFrameworkCore.csproj
@@ -5,13 +5,20 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>true</IsPackable>
-    <Version>0.3.0</Version>
+    <Version>0.3.1</Version>
     <Authors>Jim Atas</Authors>
     <Description>Entity Framework Core integration for Zift. Enables async query execution and pagination for IQueryable&lt;T&gt; using Zift's filtering, sorting, and pagination criteria.</Description>
     <PackageTags>efcore entityframeworkcore filtering sorting pagination async queryable linq</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>Readme.md</PackageReadmeFile>
+    <PackageProjectUrl>https://github.com/jimatas/Zift</PackageProjectUrl>
     <RepositoryUrl>https://github.com/jimatas/Zift</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="../../Readme.md" Pack="true" PackagePath="" />
+  </ItemGroup>
   
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.15" />
