--- a/src/Zift.EntityFrameworkCore/Zift.EntityFrameworkCore.csproj
+++ b/src/Zift.EntityFrameworkCore/Zift.EntityFrameworkCore.csproj
@@ -4,8 +4,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <IsPackable>true</IsPackable>
-    <Version>0.6.0</Version>
+    <Version>0.6.1</Version>
     <Authors>Jim Atas</Authors>
     <Description>Entity Framework Core integration for Zift. Enables async query execution and pagination for IQueryable&lt;T&gt; using Zift's filtering, sorting, and pagination criteria.</Description>
     <PackageTags>efcore entityframeworkcore filtering sorting pagination async queryable linq</PackageTags>
