Feature: Add XML doc to all core APIs
* Add XML docs for core (filtering, sorting, pagination) APIs

* Remove duplicated <returns> tag

* Add XML docs for dynamic filter expression parsing and evaluation

* Minor formatting tweaks

* Apply consistent <c> formatting for literal examples

* Update package properties for NuGet

--- a/src/Zift/Zift.csproj
+++ b/src/Zift/Zift.csproj
@@ -4,8 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <IsPackable>true</IsPackable>
-    <Version>0.6.0</Version>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <Version>0.6.1</Version>
     <Authors>Jim Atas</Authors>
     <Description>Lightweight, composable .NET library for filtering, sorting, and paginating IQueryable&lt;T&gt; using expression- or string-based criteria.</Description>
     <PackageTags>filtering sorting pagination queryable expressions linq</PackageTags>
@@ -21,7 +24,7 @@
     <None Include="../../Readme.md" Pack="true" PackagePath="" />
     <None Include="../../docs/assets/Zift_Logo_128x128.png" Pack="true" PackagePath="" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <InternalsVisibleTo Include="Zift.EntityFrameworkCore" />
     <InternalsVisibleTo Include="Zift.Tests" />
